<resources>
    <string name="app_name">Github User\'s Search</string>
    <string name="setting">Setting</string>
    <string name="username">Username…</string>
    <string name="followers">Followers</string>
    <string name="followerscount">followersCount</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="following">Following</string>
    <string name="countFollowers">%d Followers</string>
    <string name="countFollowing">%d Following</string>
    <string name="fab_favorite">FAB Favorite</string>
    <string name="favorite">Favorite</string>
    <string name="change_theme">Change Theme</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="user_github_saved">Saved Github User</string>
    <string name="share">Share</string>
</resources>